--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.41.1
-numpy==1.24.3
-scipy==1.9.1
-pandas==1.4.4
-scikit-learn==1.0.2
+numpy<2.0,>=1.26.0
+scipy>=1.9.3
+pandas==2.2.3
+scikit-learn>=1.2.1
